Unify SmartDocument element's behavior. Use DocumentElement.revertConstruction(), log errors.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDataElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/CompositeDataElementTest.html
@@ -71,6 +71,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/CompositeDocumentElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/CompositeDataElement.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/InvalidBindingException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script>
