--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentElementEditorTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentElementEditorTest.html
@@ -70,6 +70,7 @@
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentStyleSheet.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/ResourceManager.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/UndefinedDocumentResourceException.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementFactory.js"></script>
