--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/FormElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/FormElementTest.html
@@ -72,6 +72,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/CompositeDataElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/FormElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/FormField.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/InvalidBindingException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script>
