--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/FormFieldTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/FormFieldTest.html
@@ -65,6 +65,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/DataElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DataElementEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/FormField.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/InvalidBindingException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script>
