--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/TableElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/TableElementTest.html
@@ -68,6 +68,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/CompositeDataElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/FormField.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/MissingBindVariableException.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/InvalidBindingException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/TableBody.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/TableCell.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/TableColumnHeader.js"></script>
