--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DataElementTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DataElementTest.html
@@ -68,6 +68,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/CompositeDocumentElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/CompositeDataElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DataElementEditor.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/InvalidBindingException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUILogger/WebUILogger.js"></script>
