Unify specific DesktopElement behaviour. Use DeasktopElement.revertConstruction() method, log errors.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopColumnTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopColumnTest.html
@@ -74,6 +74,7 @@
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentScript.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentStyleSheet.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/ResourceManager.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentElement.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentPlugin.js"></script>
    <script type="text/javascript" src="../../Source/WebUIConfiguration/WebUIConfiguration.js"></script>
    <script type="text/javascript" src="../../Source/WebUIController/WebUIController.js"></script>
