Add reference to AssertionBehaviour.

--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopColumnTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopColumnTest.html
@@ -40,6 +40,7 @@
    <script type="text/javascript" src="../../Source/MochaUI/Window.js"></script>
    <script type="text/javascript" src="../../Source/MochaUI/Modal.js"></script>    
   
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
