--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopContentAreaTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopContentAreaTest.html
@@ -35,6 +35,7 @@
     
    <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script> 
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
 	
@@ -46,6 +47,7 @@
    <script type="text/javascript" src="../../Source/Desktop/DesktopElement.js"></script>
    <script type="text/javascript" src="../../Source/Desktop/DesktopContentArea.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
