--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -39,6 +39,7 @@
    <script type="text/javascript" src="JavaScript/Source/MochaUI/Window.js"></script>
    <script type="text/javascript" src="JavaScript/Source/MochaUI/Modal.js"></script>    
   
+   <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/AssertionBehaviour.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/TimeOutBehaviour.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/Singleton/Singleton.js"></script>
@@ -105,6 +106,7 @@
    <script type="text/javascript" src="JavaScript/Source/Desktop/WindowDocker.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DocumentManager/DocumentManager.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/ArrayList.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/AssertionException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/FundamentalTypes/JavaCompatibility.js"></script>
