--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/LanguageSelectorWidget/LanguageSelectorWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/LanguageSelectorWidget/LanguageSelectorWidgetTest.html
@@ -37,6 +37,7 @@
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlsax.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/preMadeSaxEventHandler.js"></script>
 
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script>
    
@@ -48,6 +49,7 @@
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateTransformer.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/FixedComponentOrderedTransformer.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/ComponentStateManager.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
