--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TabWidget/TabWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TabWidget/TabWidgetTest.html
@@ -32,6 +32,7 @@
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlsax.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/preMadeSaxEventHandler.js"></script>
 
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script> 
@@ -46,6 +47,7 @@
    <script type="text/javascript" src="../../Source/ComponentStateManager/FixedComponentOrderedTransformer.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/ComponentStateManager.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/IllegalArgumentException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/LinkedHashMap.js"></script>
