--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TreeWidget/TreeWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/TreeWidget/TreeWidgetTest.html
@@ -34,6 +34,7 @@
     
    <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script> 
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    
    <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
@@ -47,6 +48,7 @@
    <script type="text/javascript" src="../../Source/ComponentStateManager/ComponentStateManager.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionException.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/LinkedHashMap.js"></script>
