--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopPanelTest.html
@@ -34,6 +34,7 @@
    <script type="text/javascript" src="../../Source/MochaUI/Modal.js"></script>    
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
+   <script type="text/javascript" src="../../Libraries/StackTrace/stacktrace.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlIO.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlEscape.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlsax.js"></script>
@@ -49,6 +50,7 @@
    <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructionException.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/StateTransformer.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/DefaultStateTransformer.js"></script>
@@ -97,6 +99,7 @@
    <script type="text/javascript" src="../../Source/ScrollingBehaviour/ScrollingBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/ScrollingBehaviour/SmoothScroll.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElement.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementConstructionException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementFactory.js"></script>
@@ -114,6 +117,7 @@
    <script type="text/javascript" src="../../Source/SmartDocument/UnconfiguredDocumentElementException.js"></script>
    <script type="text/javascript" src="../../Source/Desktop/ComplexContentBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/Desktop/DesktopElement.js"></script>
+   <script type="text/javascript" src="../../Source/Desktop/DesktopElementConfigurationException.js"></script>
    <script type="text/javascript" src="../../Source/Desktop/DesktopColumn.js"></script>
    <script type="text/javascript" src="../../Source/Desktop/DesktopPanel.js"></script>
    <script type="text/javascript" src="../../Source/Desktop/DesktopPanelHeader.js"></script>
