--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Desktop/DesktopTest.html
@@ -36,6 +36,7 @@
    
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
+   <script type="text/javascript" src="../../Libraries/StackTrace/stacktrace.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlIO.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlEscape.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlsax.js"></script>
@@ -51,6 +52,7 @@
    <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructionException.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/UnconfiguredWidgetException.js"></script>
    <script type="text/javascript" src="../../Source/ComponentStateManager/StateTransformer.js"></script>
@@ -59,6 +61,7 @@
    <script type="text/javascript" src="../../Source/ComponentStateManager/ComponentStateManager.js"></script>
    <script type="text/javascript" src="../../Source/DocumentEditor/DocumentEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElement.js"></script>
+   <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementConstructionException.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditor.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="../../Source/SmartDocument/DocumentElementFactory.js"></script>
@@ -118,6 +121,8 @@
    <script type="text/javascript" src="../../Source/NewsReaderWidget/NewsReaderWidget.js"></script>
    <script type="text/javascript" src="../../Source/NewsReaderWidget/RssChannel.js"></script>
    <script type="text/javascript" src="../../Source/NewsReaderWidget/RssItem.js"></script>
+   <script type="text/javascript" src="../../Source/PartyEventWidget/PartyEvent.js"></script>
+   <script type="text/javascript" src="../../Source/PartyEventWidget/PartyEventWidget.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentResource.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentImage.js"></script>
    <script type="text/javascript" src="../../Source/ResourceManager/DocumentScript.js"></script>
