--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Internationalization/ResourceCacheTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Internationalization/ResourceCacheTest.html
@@ -21,6 +21,7 @@
    <script type="text/javascript" src="../../JsUnit/app/JsTestCase.js"></script>
    <script type="text/javascript" src="../../JsUnit/app/JsTestFunction.js"></script>
 
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
 	<script type="text/javascript" src="../../Source/Internationalization/ResourceKey.js"></script>
