--- a/Implementation/WebTier/WebContent/index.html
+++ b/Implementation/WebTier/WebContent/index.html
@@ -27,6 +27,7 @@
    <script type="text/javascript" src="JavaScript/Libraries/Sarissa/sarissa.js"></script>  
    <script type="text/javascript" src="JavaScript/Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>  
    <script type="text/javascript" src="JavaScript/Libraries/Slimbox/slimbox.js"></script>
+   <script type="text/javascript" src="JavaScript/Libraries/StackTrace/stacktrace.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/xmlIO.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/xmlEscape.js"></script>
    <script type="text/javascript" src="JavaScript/Libraries/XMLforScript/xmlsax.js"></script>
@@ -49,6 +50,7 @@
    <script type="text/javascript" src="JavaScript/Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/BrowserWidget.js"></script>
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
+   <script type="text/javascript" src="JavaScript/Source/BrowserWidget/WidgetConstructionException.js"></script> 
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/WidgetElementFactory.js"></script> 
    <script type="text/javascript" src="JavaScript/Source/BrowserWidget/UnconfiguredWidgetException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/ComponentStateManager/StateTransformer.js"></script>
@@ -65,6 +67,7 @@
    <script type="text/javascript" src="JavaScript/Source/DiagramWidget/InheritanceConnectionFigure.js"></script>
    <script type="text/javascript" src="JavaScript/Source/DocumentEditor/DocumentEditor.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElement.js"></script>
+   <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementConstructionException.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementEditor.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementEditorFactory.js"></script>
    <script type="text/javascript" src="JavaScript/Source/SmartDocument/DocumentElementFactory.js"></script>
