--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/HierarchicalMenuWidget/HierarchicalMenuWidgetTest.html
@@ -33,6 +33,7 @@
    <script type="text/javascript" src="../../Libraries/XMLforScript/preMadeSaxEventHandler.js"></script>
 
    <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutBehaviour.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
    <script type="text/javascript" src="../../Source/WebUIMessageBus/WebUIMessage.js"></script> 
