--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Internationalization/LocalizationResourceManagerTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/Internationalization/LocalizationResourceManagerTest.html
@@ -28,13 +28,18 @@
 	<script type="text/javascript" src="../../Libraries/XMLforScript/xmlsax.js"></script>
 	<script type="text/javascript" src="../../Libraries/XMLforScript/preMadeSaxEventHandler.js"></script>
     
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionBehaviour.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutBehaviour.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/WebUIException.js"></script>
    <script type="text/javascript" src="../../Source/Singleton/Singleton.js"></script>
    
 	<script type="text/javascript" src="../../Source/FundamentalTypes/JavaCompatibility.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/ArrayList.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/AssertionException.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/HashMap.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/ResourceUri.js"></script>
    <script type="text/javascript" src="../../Source/FundamentalTypes/StringTokenizer.js"></script>
+   <script type="text/javascript" src="../../Source/FundamentalTypes/TimeOutException.js"></script>
 	<script type="text/javascript" src="../../Source/FundamentalTypes/XmlResource.js"></script>
 	<script type="text/javascript" src="../../Source/Internationalization/Locale.js"></script>
 	<script type="text/javascript" src="../../Source/Internationalization/LocaleUtil.js"></script>
