--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentElementEditorTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/DocumentElementEditorTest.html
@@ -29,6 +29,7 @@
 
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
+   <script type="text/javascript" src="../../Libraries/StackTrace/stacktrace.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlIO.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlEscape.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlsax.js"></script>
