--- a/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/SmartDocumentTest.html
+++ b/Implementation/WebTier/WebContent/JavaScript/ObjectTests/SmartDocument/SmartDocumentTest.html
@@ -30,6 +30,7 @@
 
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa.js"></script>  
    <script type="text/javascript" src="../../Libraries/Sarissa/sarissa_ieemu_xpath.js"></script>
+   <script type="text/javascript" src="../../Libraries/StackTrace/stacktrace.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlIO.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlEscape.js"></script>
    <script type="text/javascript" src="../../Libraries/XMLforScript/xmlsax.js"></script>
@@ -43,6 +44,7 @@
 	
    <script type="text/javascript" src="../../Source/AbstractDocument/AbstractDocument.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/BrowserWidget.js"></script>
+   <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructionException.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetConstructedMessage.js"></script> 
    <script type="text/javascript" src="../../Source/BrowserWidget/WidgetElementFactory.js"></script>
    <script type="text/javascript" src="../../Source/BrowserWidget/UnconfiguredWidgetException.js"></script>
